# learn_opengl

./: .gitignore  CMakeLists.txt
dependencies/glad/: glad.h
src/: config.h  function.cpp  function.h  glad.c  main.cpp  make_texture.cpp  make_texture.h
src/shaders/: fragmentShader.txt  vertexShader.txt
